última versão. várias classes alteradas.