@@ -7,8 +7,12 @@ package timetabling;
 import algoritmoGenetico.AlgoritmoGenetico;
 import algoritmoGenetico.Gene;
 import java.awt.BorderLayout;
+import java.awt.Color;
+import java.awt.Container;
 import java.awt.Dimension;
+import java.awt.EventQueue;
 import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
 import java.awt.Insets;
 import java.util.ArrayList;
 import java.util.Hashtable;
@@ -18,8 +22,11 @@ import javax.swing.JFrame;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.JTable;
+import javax.swing.JTextArea;
 import javax.swing.border.TitledBorder;
+import javax.swing.table.AbstractTableModel;
 import javax.swing.table.DefaultTableModel;
+import javax.swing.table.TableModel;
 import static objetos.Cursos.ENGENHARIA_COMPUTACAO_MATUTINO;
 import static objetos.Cursos.ENGENHARIA_COMPUTACAO_NOTURNO;
 import static objetos.Cursos.ENGENHARIA_ELETRICA;
@@ -27,11 +34,16 @@ import static objetos.Cursos.ENGENHARIA_MECANICA;
 import objetos.Disciplinas;
 import objetos.Docentes;
 import objetos.Salas;
+import objetos.Timeslot;
+import objetos.Turma;
 /**
  *
  * @author HOME
  */
-public class TabelaHorario {
+public class TabelaHorarioCSV {
+    
+public static List<Turma> turmas = new ArrayList<Turma>();
+
 private static  int Linha;
 private static  int Coluna;
 
@@ -41,12 +53,12 @@ private static Object obj[];//lista horario de cada curso tamanho 4
 private static void initTabela(){
     
     obj = new Object[4];//numero de horarios para os cursos como é 4 cursos
-    obj[0] = new ArrayList<>();//horarios da engenharia de computação matutino
-    obj[1] = new ArrayList<>();//horarios da engenharia de computação noturno
-    obj[2] = new ArrayList<>();//horarios engenharia eletrica
-    obj[3] = new ArrayList<>();//horario engenharia mecanica
+    obj[0] = new ArrayList<JTable>();//horarios da engenharia de computação matutino
+    obj[1] = new ArrayList<JTable>();//horarios da engenharia de computação noturno
+    obj[2] = new ArrayList<JTable>();//horarios engenharia eletrica
+    obj[3] = new ArrayList<JTable>();//horario engenharia mecanica
     
-    ponto =  new Hashtable <>();
+    ponto =  new Hashtable <Integer,Integer[]>();
     gerarHashTimeslot(ponto);
    
 //    Integer i [] = ponto.get(34);
@@ -126,26 +138,25 @@ private static void initTabela(){
        String table[][] = new String[15][7];
        table = getTimeSlots(table,7,22);
        
-       Gene genes[] = AlgoritmoGenetico.getCromossomo();
-        
-       for (int i = 0; i < genes.length; i++) {
-            Gene gene = genes[i];
-            int disciplina = gene.getDisciplina();
-            int professor  = gene.getProfessor();
-            int sala       = gene.getSala();
-            int timeslot   = gene.getTimeslot();
+       for (int i = 0; i < turmas.size(); i++) {
+            Turma turma = turmas.get(i);
+            String disciplina  = turma.getDisciplina();
+            String professor    = turma.getProfessor();
+            String sala         = turma.getSala();
+            int timeslot        = turma.getTimeslot();
+            int cursoTurma      = turma.getCurso();
+            int periodoTurma    = Integer.valueOf(turma.getPeriodo());
             
-            Integer key = Disciplinas.D.get(disciplina);
-            String cursoDisciplina = Disciplinas.disciplinacurso.get(key);
-            int codigoTimeslot = timeslot + 1;
-            if(curso == Integer.valueOf(cursoDisciplina).intValue()){
-                String periodoDisciplina = Disciplinas.disciplinaperiodo.get(key);
-                if(periodo == Integer.valueOf(periodoDisciplina).intValue()){                 
-                     if(ponto.get(codigoTimeslot) != null){
-                        Integer p[] = ponto.get(new Integer(codigoTimeslot));
+           
+            
+            if(curso == cursoTurma){
+                
+                if(periodo == periodoTurma){                 
+                     if(ponto.get(timeslot) != null){
+                        Integer p[] = ponto.get(new Integer(timeslot));
 //                        System.out.println("Timeslot"+timeslot);
 //                        System.out.println(" p0:"+p[0] + " p1:"+p[1]);
-                        table[p[0]][p[1]] = "["+Disciplinas.disciplinadesc.get(key) +" | "+Docentes.docentenome.get((professor+1)+"")+" | "+Salas.saladesc.get((sala+1)+"")+ "]";
+                        table[p[0]][p[1]] = "["+disciplina +" | "+professor+" | "+sala+ "]";
                     }
                    
                 }
